crates/ty_python_semantic/resources/mdtest/snapshots/single_matching_over…_-_Single_matching_over…_-_Bound_method_overloa…_(39e892ccb644ee63).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: single_matching_overload.md - Single matching overload - Bound method overloads preserve original positions
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/single_matching_overload.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import overload
 2 | 
 3 | class Base:
 4 |     @overload
 5 |     def f(self: "Child", x: bytes) -> bytes: ...
 6 |     @overload
 7 |     def f(self, x: int) -> int: ...
 8 |     @overload
 9 |     def f(self, x: str, y: int) -> str: ...
10 |     def f(
11 |         self,
12 |         x: bytes | int | str,
13 |         y: int = 0,
14 |     ) -> bytes | int | str:
15 |         return x
16 | 
17 | class Child(Base):
18 |     pass
19 | 
20 | Base().f("ok", "bad")  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to bound method `Base.f` is incorrect
  --> src/mdtest_snippet.py:20:16
   |
20 | Base().f("ok", "bad")  # error: [invalid-argument-type]
   |                ^^^^^ Expected `int`, found `Literal["bad"]`
   |
info: Matching overload defined here
 --> src/mdtest_snippet.py:9:9
  |
9 |     def f(self, x: str, y: int) -> str: ...
  |         ^               ------ Parameter declared here
  |
info: Non-matching overloads for bound method `f`:
info:   (self: Child, x: bytes) -> bytes
info:   (self, x: int) -> int

```
